# clawd-buddy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: buddy.md
FEATURES/: SUGGESTIONS.md
src/clawd_buddy/: __init__.py  app.py
