[project]
name = "clawd-buddy"
version = "0.1.4"
description = "Animated terminal pet that sits on your taskbar and reacts to AI coding assistant events"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ramy Ezzat", email = "ramymagdy-rm@users.noreply.github.com" },
]
keywords = ["clawd", "buddy", "pet", "animation", "taskbar", "coding-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "pygame-ce>=2.5",
    "pystray>=0.19",
    "Pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/ramymagdy-rm/clawd-buddy"
Repository = "https://github.com/ramymagdy-rm/clawd-buddy"
Issues = "https://github.com/ramymagdy-rm/clawd-buddy/issues"

[project.scripts]
clawd-buddy = "clawd_buddy.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clawd_buddy"]
